--- a/src/main/webapp/resources/CSS/styles.css
+++ b/src/main/webapp/resources/CSS/styles.css
@@ -418,7 +418,7 @@ section article .product span img{
 .infoProfile .info .personal{
     position: absolute;
     width: 70%;
-    left: 38%;
+    left: 10%;
 }
 input[type="checkbox" i] {
     width: 40px;
@@ -438,35 +438,17 @@ input[type="text" i]{
     font-family: Georgia, 'Times New Roman', Times, serif;
     letter-spacing: 1.5px;
 }
-.save{
+.save, .infoProfile input{
     position: relative;
-    background-color: #E8E326;
     width: 15%;
     height: 40px;
     margin-left: 43%;
-    font-size: 18px;
-    border: 1px solid white;
     border-radius: 10px;
-    color: black;
-    font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
-    font-weight: bold;
-    text-decoration: none;
     transition: background-color 1s;
-    cursor: pointer;
 
 }
-.save a{
-    position: relative;
-    top: 12%;
-}
-.save a:link, .save a:visited, .save a:active .save a:hover{
-    color: black;
-    text-decoration: none;
-    cursor: pointer;
-}
-.save:hover {
-    background-color: #ECBF07;
-}
+
+
 .orderNow {
     background-color: #E39816;
     color: black;
